[package]
name = "safe-indexer-rs"
version = "0.1.0"
authors = ["Jose Alvarez <jose.alvarez@gnosis.pm>"]
edition = "2018"

[lib]
name = "commons"
path = "src/lib/lib.rs"

[[bin]]
name = "producer"
path = "src/producer/main.rs"

[[bin]]
name = "consumer"
path = "src/consumer/main.rs"

[dependencies]
celery = "0.4.0-rc8"
celery-codegen = "0.4.0-rc8"

serde = "1.0"

tokio = "1.10"

anyhow = "1.0"

env_logger = "0.9"
log = "0.4"

dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

ethcontract = "0.15.1"
